gccida/c0/expand_assignment
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4114:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // [rsp+B8h] [rbp-128h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4117:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *exp; // [rsp+D0h] [rbp-110h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4118:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+DCh] [rbp-104h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4141:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode1; // [rsp+1ACh] [rbp-34h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4184:17: error: used type 'struct rtx_def' where arithmetic or pointer type is required
v37 = to_rtx[1] ? *( _DWORD *)( *( _QWORD *)&to_rtx[1] + 32LL) : 8; 
      ~~~~~~~~~ ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4200:17: error: used type 'struct rtx_def' where arithmetic or pointer type is required
v35 = to_rtx[1] ? *( _QWORD *)( *( _QWORD *)&to_rtx[1] + 8LL) : 0LL; 
      ~~~~~~~~~ ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4203:17: error: used type 'struct rtx_def' where arithmetic or pointer type is required
v34 = to_rtx[1] ? *( _QWORD *)( *( _QWORD *)&to_rtx[1] + 8LL) : 0LL; 
      ~~~~~~~~~ ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4207:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( to_rtx[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4246:54: error: use of undeclared identifier 'machine_mode'
result = store_field( target, v30, v29, mode, exp, ( machine_mode)v26, v25, type, alias_set); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4252:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( toa->common.type->block.abstract_origin)) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4253:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( froma->common.type->block.abstract_origin)) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4279:35: error: use of undeclared identifier 'machine_mode'
temp = expand_expr( froma, 0LL, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)to_rtx), EXPAND_NORMAL); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4279:50: error: expected expression
temp = expand_expr( froma, 0LL, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)to_rtx), EXPAND_NORMAL); 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4313:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v18.rtwint = ( __int64)to_rtx->fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4315:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v16.rtwint = ( __int64)from_rtx->fld[0]; 
                       ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/expr.c:4317:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( sizetype_tab[0]->block.abstract_origin)) >> 1), 
  ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_assignment/src/obj/expr.o] Error 1
